@@ -1,3 +1,15 @@
+2012-03-11  Pavel Feldman  <pfeldman@chromium.org>
+
+        Web Inspector: [chromium] add provisional test for the downstream sanity test.
+        https://bugs.webkit.org/show_bug.cgi?id=80784
+
+        Reviewed by Yury Semikhatsky.
+
+        * src/js/Tests.js:
+        (.TestSuite.prototype.checkLogAndErrorMessages.validMessage):
+        (.TestSuite.prototype.checkLogAndErrorMessages.onConsoleMessage):
+        (.TestSuite.prototype.checkLogAndErrorMessages):
+
 2012-03-10  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r110384.
